<resources>
    <string name="app_name">TourTrek</string>
    <string name="title_tour_market">Tour Market</string>
    <string name="title_tours">Personal Tours</string>
    <string name="title_profile">Profile</string>
    <string name="action_sign_in">Sign In</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="action_register">Register</string>
...
